# rlvr-tito

./: .gitignore  README.md  pyproject.toml
docs/: RUNBOOK.md
examples/: tau2_episode.py  tau2_retail_train.py  toy_agent.py
rlvr_tito/: grpo.py  proxy.py  store.py  trainer.py
scripts/: push_secrets.sh  stack.sh
test_e2e/: build_tiny_model.py  mock_vllm.py  password_agent.py  run_e2e.py
tests/: test_core.py
