[project]
name = "rlvr-tito"
version = "0.1.0"
description = "Token-In Token-Out RLVR training loop for multi-turn agents (GRPO + vLLM LoRA hot-swap)"
requires-python = ">=3.11"
dependencies = [
  "torch>=2.4",
  "transformers>=4.51",
  "peft>=0.14",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "httpx>=0.27",
]

[project.optional-dependencies]
client = ["openai>=1.60"]

[tool.setuptools.packages.find]
include = ["rlvr_tito*"]
